# algo-engineering

./: .editorconfig  .gitattributes  .gitignore  .gitmessage.txt  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: CODEOWNERS  CODEOWNERS.template  PULL_REQUEST_TEMPLATE.md  dependabot.yml
00-meta/: 00-index.md  01-workspace-architecture.md  02-document-taxonomy.md  (+2 more)
labs/cache-locality-lab/: .dockerignore  Cargo.toml  Dockerfile  METHODOLOGY.md  README.md  compose.yaml
labs/cache-locality-lab/benches/: cache_locality.rs
labs/cache-locality-lab/docs/: docker-perf-runbook.md
labs/cache-locality-lab/reports/: README.md  latest-summary.json  latest-summary.md
labs/cache-locality-lab/reports/pointer-layout/: 2026-05-22-container-perf-analysis.md  README.md  arena_pointer_chain-perf-stat.txt  arena_pointer_chain-probe.json  boxed_pointer_chain-perf-stat.txt  boxed_pointer_chain-probe.json  docker-perf-summary.json  docker-perf-summary.md  packed_index_chase-perf-stat.txt  packed_index_chase-probe.json  pmc-status.txt  split_soa_index_chase-perf-stat.txt  split_soa_index_chase-probe.json
labs/cache-locality-lab/scripts/: profile-pointer-layout-docker.ps1  profile-pointer-layout.ps1  run-bench.ps1  run-docker-bench.ps1  run-docker-perf.ps1  run-perf-linux.sh  run-perf.ps1  run-pointer-layout-perf-linux.sh
labs/cache-locality-lab/src/: lib.rs
labs/cache-locality-lab/src/experiments/: matrix_blocking.rs  mod.rs  pointer_layout.rs  simd_scan.rs
labs/cache-locality-lab/src/kernels/: matrix.rs  mod.rs  pointer_layout.rs  simd_scan.rs
(+60 files in other folders)
